fix: prevents placeholder wrap

--- a/frontend/web/styles/project/_segments.scss
+++ b/frontend/web/styles/project/_segments.scss
@@ -3,7 +3,6 @@
   background-color: $bg-light200;
   .react-select {
     font-weight: normal;
-    width: 100%;
     .react-select__input input {
       font-weight: normal;
     }
